# f1-game-packet-parser

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo_deny.yaml  check_msrv.yaml  ci.yaml
src/: lib.rs
src/constants/: driver_id.rs  mod.rs  session_type.rs  team_id.rs  wheel_index.rs
src/packets/: car_damage.rs  car_setups.rs  car_status.rs  car_telemetry.rs  event.rs  final_classification.rs  lap.rs  lap_data.rs  laps.rs  lobby.rs  mod.rs  motion.rs  participants.rs  session.rs  session_history.rs  time_trial.rs  tyre_sets.rs
tests/: parse.rs
