[package]
name = "f1-game-packet-parser"
description = "Convert binary data from F1 24, F1 23, and F1 22 UDP telemetry into organised structs."
version = "1.0.2"
edition = "2021"
rust-version = "1.78"
readme = "README.md"
homepage = "https://github.com/maciejpedzich/f1-game-packet-parser"
repository = "https://github.com/maciejpedzich/f1-game-packet-parser"
keywords = ["f1", "f1-telemetry", "f1-udp-parser", "f1-udp-telemetry", "f1-telemetry-parser"]
categories = ["parser-implementations"]
authors = ["Maciej Pędzich <contact@maciejpedzi.ch>"]
license = "MIT"
exclude = [
    ".github/*",
    ".idea/*",
    "tests/*"
]

[dependencies]
binrw = "0.14.1"
bitflags = "2.9.0"
serde = { version = "1.0.219", features = ["derive"] }
